CSDEV/objects/Knowledge__kav.object
<CustomObject>
    <fields>
        <fullName>HAE_Content_Description__c</fullName>
        <description>HAE: defines Content Description for Knowledge Article.</description>
        <label>Content Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HAE_Products_s__c</fullName>
        <description>HAE: Products are defined for CS Knowledge Page Layout</description>
        <label>Products(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACP215</fullName>
                </value>
                <value>
                    <fullName>CS 5</fullName>
                </value>
                <value>
                    <fullName>CS 5+</fullName>
                </value>
                <value>
                    <fullName>CS Elite</fullName>
                </value>
                <value>
                    <fullName>CS Elite+</fullName>
                </value>
                <value>
                    <fullName>Harmony</fullName>
                </value>
                <value>
                    <fullName>MCS+</fullName>
                </value>
                <value>
                    <fullName>NexSys PCS</fullName>
                </value>
                <value>
                    <fullName>OrthoPat</fullName>
                </value>
                <value>
                    <fullName>PCS2</fullName>
                </value>
                <value>
                    <fullName>TEG5000</fullName>
                </value>
                <value>
                    <fullName>TEG6s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Region__c</fullName>
        <description>HAE: It specifies the article belongs to the region.</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Type__c</fullName>
        <description>HAE: denotes type of knowledge article.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Article</fullName>
                </value>
                <value>
                    <fullName>Instructions</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>HAE_Customer_Service</fullName>
        <active>true</active>
        <description>HAE: Only CS Knowledge Articles would be considered.</description>
        <label>Customer Service</label>
    </recordTypes>
</CustomObject>